--- a/templates/index.html
+++ b/templates/index.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title >API RENDER</title>
+    <title >API Render Coordinates</title>
     <style>
       body {
-          background-color: #aca8a8; /* Color de fondo oscuro */
+          background-color: #f5eeee; /* Color de fondo oscuro */
           color: white; /* Color de texto */
           font-family: Arial, sans-serif; /* Fuente del texto */
           padding: 20px; /* Espaciado interior */
       }
-      h1 {
-          color: red; /* Color rojo para el título principal */
+      
+      .Titulo {
+        background-color: #fc0808;
+
       }
-      div {
+      .Contenido {
           background-color: #333; /* Color de fondo oscuro para el div */
           padding: 15px; /* Espaciado interior del div */
           margin-top: 20px; /* Margen superior */
@@ -26,28 +28,37 @@
   </style>
 </head>
 <body>
-    <h1>API CONSULTA DE COORDENADAS ESTÁ ACTIVA</h1>
+  <div class="Titulo">
+    <h1 style="color:#f5eeee">API CONSULTA DE COORDENADAS ESTÁ ACTIVA</h1>
+  </div>
     <br>
     <h2>Parámetros para el método POST</h2>
-    <p>JSON de ejemplo:</p>
-    <div>
+    <p>
+      <span style="color: green;font-weight: bold;">Url del Endpoit:</span>
+      <span style="color: red;">https://muestreo-de-puntos.onrender.com/generate-map</span>
+    </p>
+    <p>
+      <samp style="color: green;font-weight: bold;">JSON de de ejemplo:</samp> 
+    </p>
+
+    <div class="Contenido">
       <pre>
           {
-              "Departamento": "AYACUCHO",
-              "Provincia": "HUANTA",
-              "Distrito": "IGUAIN",
-              "DiccionarioPuntos": {
-                "Punto 1": [-74.22177636647999, -12.990092382255995],
-                "Punto 2": [-74.2169500514367, -12.96851318157424],
-                "Punto 3": [-74.22122551977878, -12.983558205695665],
-                "Punto 4": [-74.22264087758928, -12.980474113395678],
-                "Punto 5": [-74.21986777821412, -12.975849290825769],
-                "Punto 6": [-74.22186511449841, -12.974253850116721],
-                "Punto 7": [-74.2184392018611, -12.99043919073571],
-                "Punto 8": [-74.2202314606623, -12.968993352057701],
-                "Punto 9": [-74.21809553370747, -12.976150035827443],
-                "Punto 10": [-74.22237603049598, -12.989333931691757],
-                "Punto 11": [-74.22196046558193, -12.996294387451847]
+            "Departamento": "AYACUCHO",
+            "Provincia": "HUANTA",
+            "Distrito": "IGUAIN",
+            "DiccionarioPuntos": {
+              "Punto 1": [-74.22177636647999, -12.990092382255995],
+              "Punto 2": [-74.2169500514367, -12.96851318157424],
+              "Punto 3": [-74.22122551977878, -12.983558205695665],
+              "Punto 4": [-74.22264087758928, -12.980474113395678],
+              "Punto 5": [-74.21986777821412, -12.975849290825769],
+              "Punto 6": [-74.22186511449841, -12.974253850116721],
+              "Punto 7": [-74.2184392018611, -12.99043919073571],
+              "Punto 8": [-74.2202314606623, -12.968993352057701],
+              "Punto 9": [-74.21809553370747, -12.976150035827443],
+              "Punto 10": [-74.22237603049598, -12.989333931691757],
+              "Punto 11": [-74.22196046558193, -12.996294387451847]
               }
             }          
       </pre>
