--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,7 @@
                 "Departamento": "AYACUCHO",
                 "Provincia": "HUANTA",
                 "Distrito": "IGUAIN",
+                "Sector":"VILLA FLORIDA",
                 "DiccionarioPuntos": {
                     "Punto 1": [-74.22177636647999, -12.990092382255995],
                     "Punto 2": [-74.2169500514367, -12.96851318157424],
