Nuevos cambios en el API

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
         }
         
         .Contenido {
-            background-color: #333; /* Color de fondo oscuro para el div */
+            background-color: #827f7f; /* Color de fondo oscuro para el div */
             padding: 15px; /* Espaciado interior del div */
             margin-top: 20px; /* Margen superior */
             border-radius: 5px; /* Bordes redondeados */
@@ -54,12 +54,20 @@
         <h1>API CONSULTA DE COORDENADAS ESTÁ ACTIVA</h1>
     </div>
     <br>
+    <h2>Url de los Endpoint</h2>
+    <div class="contenido">
+        <p>
+            <span class="json-label">File HTML:</span>
+            <span class="url">https://muestreo-de-puntos.onrender.com/generatemap-html</span>
+        </p>
+        <p>
+            <span class="json-label">File KML:</span>
+            <span class="url">https://muestreo-de-puntos.onrender.com/generatemap-kml</span>
+        </p>
+    </div>
+    <br>
     <h2>Parámetros para el método POST</h2>
     <div class="Contenido">
-        <p>
-            <span class="json-label">Url del Endpoint:</span>
-            <span class="url">https://muestreo-de-puntos.onrender.com/generate-map</span>
-        </p>
         <p>
             <span class="json-label">JSON de ejemplo:</span>
         </p>
