--- a/templates/index.html
+++ b/templates/index.html
@@ -58,11 +58,11 @@
     <div class="contenido">
         <p>
             <span class="json-label">File HTML:</span>
-            <span class="url">https://muestreo-de-puntos.onrender.com/generatemap-html</span>
+            <span class="url">https://muestreo-de-puntos-zssz.onrender.com/generatemap-html</span>
         </p>
         <p>
             <span class="json-label">File KML:</span>
-            <span class="url">https://muestreo-de-puntos.onrender.com/generatemap-kml</span>
+            <span class="url">https://muestreo-de-puntos-zssz.onrender.com/generatemap-kml</span>
         </p>
     </div>
     <br>
